fixed glitching scrollbar

--- a/dms4/assignment3/style.css
+++ b/dms4/assignment3/style.css
@@ -6,6 +6,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #typingBox {
